--- a/registration.html
+++ b/registration.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header">
-        <div class="header__wrapper container">
+        <div class="header__wrapper container-main">
             <div>
                 <a href="index.html"><img class="header__logo" src="imgs/logo.svg" alt="logo" width="44"
                         height="38"></a>
@@ -69,14 +69,15 @@
         </div>
     </header>
 
-    <main class="registration ">
+    <main class="registration">
         <section class="heading-block">
-            <div class="heading-block container container--tablet">
+            <div class="heading-block container-main container--tablet">
                 <h1 class="heading-block__heading">registration</h1>
             </div>
         </section>
-        <section class="registarion__block container registarion__block--tablet">
-            <div class="registarion__wrapper form-block">
+        <section class="registration__block container-main registration__block--tablet">
+            <h2 class="visually-hidden">Registration form</h2>
+            <div class="registration__wrapper form-block">
                 <form class="form-block" action="#">
                     <fieldset class="wrapper-form">
                         <legend class="wrapper-form__text">Your Name</legend>
@@ -113,7 +114,7 @@
                 <ul class="perks-list">
                     <li class="perks-list__item">15% off welcome offer</li>
                     <li class="perks-list__item">
-                        Free shipping, returns and exchanges on all <span class="perks-list__item--span">orders</span>
+                        Free shipping, returns and exchanges on all <span class="perks-list__item-span">orders</span>
 
                     </li>
                     <li class="perks-list__item">$10 off a purchase on your birthday</li>
@@ -125,7 +126,7 @@
     </main>
 
     <footer class="footer">
-        <div class="footer__wrap container">
+        <div class="footer__wrap container-main">
             <section class="footer__quote">
                 <h2 class="visually-hidden">reviews</h2>
                 <img class="footer__quote-img" src="imgs/girl.png" alt="girl" width="96" height="96">
@@ -135,14 +136,14 @@
             <section class="footer__subscribe ">
                 <h3 class="footer__subscribe-heading">subscribe</h3>
                 <p class="footer__subscribe-text">FOR OUR NEWLETTER AND PROMOTION</p>
-                <form class="footer__subscribe-form" action="#">
-                    <input class="subscribe__form-area" type="email" placeholder="Enter Your Email" required>
-                    <button class="subscribe__form-button" type="submit">Subscribe</button>
+                <form class="footer__subscribe-form subscribe-form" action="#">
+                    <input class="subscribe-form__area" type="email" placeholder="Enter Your Email" required>
+                    <button class="subscribe-form__button" type="submit">Subscribe</button>
                 </form>
             </section>
         </div>
         <section class="footer__info">
-            <div class="footer__info-wrap container">
+            <div class="footer__info-wrap container-main">
                 <h2 class="visually-hidden">copyright</h2>
                 <p class="footer__info-copy">© 2021 Brand All Rights Reserved.</p>
                 <ul class="footer__socials-list">
@@ -157,6 +158,7 @@
                 </ul>
             </div>
         </section>
+
     </footer>
 
     <script src="scripts/modal-all.js"></script>
